--- a/src/style.scss
+++ b/src/style.scss
@@ -37,7 +37,7 @@ body {
   }
 }
 
-.btn {
+.header__btn {
   @include transition-mix;
   
   padding: 10px 20px;
@@ -78,4 +78,20 @@ body {
    font: {
     size: 2.1rem;
   }
+}
+
+//content styles
+.content {
+  max-width: 700px;
+  width: 95%;
+  margin: 0 auto 40px;
+}
+
+.content__title {
+  margin-bottom: 40px;
+  
+  font: {
+    size: 20px;
+  }
+  text-align: center;
 }
