Form: basic structure

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,3 +9,12 @@ header.header
   
   //content inner
   .content__inner
+  
+    //multisteps-form
+    .multisteps-form
+    
+      //progress bar
+      .row
+      
+      //form panels
+      .row
