Form: steps structure

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,5 +16,28 @@ header.header
       //progress bar
       .row
       
+        .col-12.col-md-8.col-lg-6.m-auto
+        
+          .multisteps-form__progress
+
+            ul.multisteps-form__progress-list
+
+              li.multisteps-form__progress-item
+
+                button.multisteps-form__progress-btn(type="button" title="Step 1") Step 1
+
+              li.multisteps-form__progress-item
+
+                button.multisteps-form__progress-btn(type="button" title="Step 2") Step 2
+
+              li.multisteps-form__progress-item
+
+                button.multisteps-form__progress-btn(type="button" title="Step 3") Step 3
+
+              li.multisteps-form__progress-item
+
+                button.multisteps-form__progress-btn(type="button" title="Step 4") Step 4
+        
+      
       //form panels
       .row
