Form: steps structure - data-attrs added

--- a/src/index.pug
+++ b/src/index.pug
@@ -24,19 +24,19 @@ header.header
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 1") Step 1
+                button.multisteps-form__progress-btn(type="button" title="Step 1" data-step="1") Step 1
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 2") Step 2
+                button.multisteps-form__progress-btn(type="button" title="Step 2" data-step="2") Step 2
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 3") Step 3
+                button.multisteps-form__progress-btn(type="button" title="Step 3" data-step="3") Step 3
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 4") Step 4
+                button.multisteps-form__progress-btn(type="button" title="Step 4" data-step="4") Step 4
         
       
       //form panels
