Form: panels structure - basics

--- a/src/index.pug
+++ b/src/index.pug
@@ -41,3 +41,19 @@ header.header
       
       //form panels
       .row
+      
+        .col-12.col-md-8.col-lg-6.m-auto
+        
+          form.multisteps-form__form
+          
+            //single form panel
+            .multisteps-form__panel
+            
+            //single form panel
+            .multisteps-form__panel
+            
+            //single form panel
+            .multisteps-form__panel
+            
+            //single form panel
+            .multisteps-form__panel
