Form: panels - panel 1

--- a/src/index.pug
+++ b/src/index.pug
@@ -48,6 +48,44 @@ header.header
           
             //single form panel
             .multisteps-form__panel
+              
+              h3.multisteps-form__title Customer Info
+              
+              .multisteps-form__content
+              
+                .form-row.mt-4
+                
+                  .col
+                  
+                    input.multisteps-form__input.form-control(type="text" placeholder="First Name")
+                  
+                  .col
+                  
+                    input.multisteps-form__input.form-control(type="text" placeholder="Last Name")
+                    
+                .form-row.mt-4
+                
+                  .col
+                  
+                    input.multisteps-form__input.form-control(type="text" placeholder="Login")
+                  
+                  .col
+                  
+                    input.multisteps-form__input.form-control(type="email" placeholder="Email")
+                    
+                .form-row.mt-4
+                
+                 .col
+                  
+                  input.multisteps-form__input.form-control(type="password" placeholder="Password")
+                  
+                 .col
+                  
+                  input.multisteps-form__input.form-control(type="password" placeholder="Repeat Password")
+                  
+                .button-row.mt-4
+                
+                  button.btn.btn-primary(type="button") Next
             
             //single form panel
             .multisteps-form__panel
