Form: panels - panel 2

--- a/src/index.pug
+++ b/src/index.pug
@@ -49,7 +49,7 @@ header.header
             //single form panel
             .multisteps-form__panel
               
-              h3.multisteps-form__title Customer Info
+              h3.multisteps-form__title Customer's Info
               
               .multisteps-form__content
               
@@ -90,6 +90,39 @@ header.header
             //single form panel
             .multisteps-form__panel
             
+              h3.multisteps-form__title Customer's Address
+              
+              .multisteps-form__content
+              
+                .form-row.mt-4
+                  
+                  input.multisteps-form__input.form-control(type="text" placeholder="Address 1")
+                  
+                .form-row.mt-4
+                  
+                  input.multisteps-form__input.form-control(type="text" placeholder="Address 2")
+                  
+                .form-row.mt-4
+                
+                  .col-6
+                    
+                    input.multisteps-form__input.form-control(type="text" placeholder="City")
+                    
+                  .col-3
+                    
+                    select.multisteps-form__select.form-control
+                      option(selected) State...
+                      option ...
+                      
+                  .col-3
+                  
+                    input.multisteps-form__input.form-control(type="text" placeholder="Zip")
+                    
+                .button-row.mt-4
+                  
+                  button.btn.btn-primary(type="button") Prev
+                  button.btn.btn-primary(type="button") Next
+              
             //single form panel
             .multisteps-form__panel
             
