Form: panels - panel 3

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,7 +16,7 @@ header.header
       //progress bar
       .row
       
-        .col-12.col-md-8.col-lg-6.m-auto
+        .col-12.col-md-10.col-lg-8.m-auto
         
           .multisteps-form__progress
 
@@ -42,14 +42,14 @@ header.header
       //form panels
       .row
       
-        .col-12.col-md-8.col-lg-6.m-auto
+        .col-12.col-md-10.col-lg-6.m-auto
         
           form.multisteps-form__form
           
             //single form panel
             .multisteps-form__panel
               
-              h3.multisteps-form__title Customer's Info
+              h3.multisteps-form__title Your User Info
               
               .multisteps-form__content
               
@@ -90,7 +90,7 @@ header.header
             //single form panel
             .multisteps-form__panel
             
-              h3.multisteps-form__title Customer's Address
+              h3.multisteps-form__title Your Address
               
               .multisteps-form__content
               
@@ -125,6 +125,53 @@ header.header
               
             //single form panel
             .multisteps-form__panel
+            
+              h3.multisteps-form__title Your Order
+              
+              .multisteps-form__content
+              
+                .row
+                  .col-6.mt-4
+                
+                    .card
+                      .card-body
+                    
+                        h5.card-title Item Title
+                        p.card-text Small and nice item description
+                        a.btn.btn-primary(href="#" title="Item Link") Item Link
+                        
+                  .col-6.mt-4
+                
+                    .card
+                      .card-body
+                    
+                        h5.card-title Item Title
+                        p.card-text Small and nice item description
+                        a.btn.btn-primary(href="#" title="Item Link") Item Link
+                        
+                  .col-6.mt-4
+                
+                    .card
+                      .card-body
+                    
+                        h5.card-title Item Title
+                        p.card-text Small and nice item description
+                        a.btn.btn-primary(href="#" title="Item Link") Item Link
+                        
+                  .col-6.mt-4
+                
+                    .card
+                      .card-body
+                    
+                        h5.card-title Item Title
+                        p.card-text Small and nice item description
+                        a.btn.btn-primary(href="#" title="Item Link") Item Link
+                   
+                .row
+                  .button-row.mt-4.col-12
+                  
+                    button.btn.btn-primary(type="button") Prev
+                    button.btn.btn-primary(type="button") Next
             
             //single form panel
             .multisteps-form__panel
