Form: panels - panel 4

--- a/src/index.pug
+++ b/src/index.pug
@@ -175,3 +175,15 @@ header.header
             
             //single form panel
             .multisteps-form__panel
+            
+              h3.multisteps-form__title Additional Comments
+              
+              .multisteps-form__content
+              
+                .form-row.mt-4
+                
+                  textarea.form-control(placeholder="Additional Comments and Requirements")
+                  
+                .button-row.mt-4
+                
+                  button.btn.btn-primary(type="button") Prev
