Form: panels - btn classes and titles

--- a/src/index.pug
+++ b/src/index.pug
@@ -83,9 +83,9 @@ header.header
                   
                   input.multisteps-form__input.form-control(type="password" placeholder="Repeat Password")
                   
-                .button-row.mt-4
+                .button-row.d-flex.mt-4
                 
-                  button.btn.btn-primary(type="button") Next
+                  button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
             .multisteps-form__panel
@@ -118,10 +118,10 @@ header.header
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Zip")
                     
-                .button-row.mt-4
+                .button-row.d-flex.mt-4
                   
-                  button.btn.btn-primary(type="button") Prev
-                  button.btn.btn-primary(type="button") Next
+                  button.btn.btn-primary(type="button" title="Prev") Prev
+                  button.btn.btn-primary.ml-auto(type="button" title="Next") Next
               
             //single form panel
             .multisteps-form__panel
@@ -168,10 +168,10 @@ header.header
                         a.btn.btn-primary(href="#" title="Item Link") Item Link
                    
                 .row
-                  .button-row.mt-4.col-12
+                  .button-row.d-flex.mt-4.col-12
                   
-                    button.btn.btn-primary(type="button") Prev
-                    button.btn.btn-primary(type="button") Next
+                    button.btn.btn-primary(type="button" title="Prev") Prev
+                    button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
             .multisteps-form__panel
@@ -184,6 +184,6 @@ header.header
                 
                   textarea.form-control(placeholder="Additional Comments and Requirements")
                   
-                .button-row.mt-4
+                .button-row.d-flex.mt-4
                 
-                  button.btn.btn-primary(type="button") Prev
+                  button.btn.btn-primary(type="button" title="Prev") Prev
