Form: panels - basic styles

--- a/src/index.pug
+++ b/src/index.pug
@@ -47,7 +47,7 @@ header.header
           form.multisteps-form__form
           
             //single form panel
-            .multisteps-form__panel
+            .multisteps-form__panel.shadow.p-4.rounded
               
               h3.multisteps-form__title Your User Info
               
@@ -88,7 +88,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel
+            .multisteps-form__panel.shadow.p-4.rounded
             
               h3.multisteps-form__title Your Address
               
@@ -124,7 +124,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
               
             //single form panel
-            .multisteps-form__panel
+            .multisteps-form__panel.shadow.p-4.rounded
             
               h3.multisteps-form__title Your Order
               
@@ -133,7 +133,7 @@ header.header
                 .row
                   .col-6.mt-4
                 
-                    .card
+                    .card.shadow-sm
                       .card-body
                     
                         h5.card-title Item Title
@@ -142,7 +142,7 @@ header.header
                         
                   .col-6.mt-4
                 
-                    .card
+                    .card.shadow-sm
                       .card-body
                     
                         h5.card-title Item Title
@@ -151,7 +151,7 @@ header.header
                         
                   .col-6.mt-4
                 
-                    .card
+                    .card.shadow-sm
                       .card-body
                     
                         h5.card-title Item Title
@@ -160,7 +160,7 @@ header.header
                         
                   .col-6.mt-4
                 
-                    .card
+                    .card.shadow-sm
                       .card-body
                     
                         h5.card-title Item Title
@@ -174,7 +174,7 @@ header.header
                     button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel
+            .multisteps-form__panel.shadow.p-4.rounded
             
               h3.multisteps-form__title Additional Comments
               
@@ -187,3 +187,4 @@ header.header
                 .button-row.d-flex.mt-4
                 
                   button.btn.btn-primary(type="button" title="Prev") Prev
+                  button.btn.btn-success.ml-auto(type="button" title="Send") Send
