Form: panels - panels hidden styles

--- a/src/index.pug
+++ b/src/index.pug
@@ -47,7 +47,7 @@ header.header
           form.multisteps-form__form
           
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white
               
               h3.multisteps-form__title Your User Info
               
@@ -88,7 +88,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
             
               h3.multisteps-form__title Your Address
               
@@ -124,7 +124,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
               
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
             
               h3.multisteps-form__title Your Order
               
@@ -174,7 +174,7 @@ header.header
                     button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
             
               h3.multisteps-form__title Additional Comments
               
