Progress: btn text is changed, margin fixes

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,27 +16,27 @@ header.header
       //progress bar
       .row
       
-        .col-12.col-md-10.col-lg-8.m-auto
+        .col-12.col-md-10.col-lg-8.ml-auto.mr-auto.mb-4
         
           .multisteps-form__progress
 
-            ul.multisteps-form__progress-list
+            ul.multisteps-form__progress-list.list-inline
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 1" data-step="1") Step 1
+                button.multisteps-form__progress-btn(type="button" title="User Info" data-step="1") User Info
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 2" data-step="2") Step 2
+                button.multisteps-form__progress-btn(type="button" title="Address" data-step="2") Address
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 3" data-step="3") Step 3
+                button.multisteps-form__progress-btn(type="button" title="Order Info" data-step="3") Order Info
 
               li.multisteps-form__progress-item
 
-                button.multisteps-form__progress-btn(type="button" title="Step 4" data-step="4") Step 4
+                button.multisteps-form__progress-btn(type="button" title="Comments" data-step="4") Comments
         
       
       //form panels
@@ -126,7 +126,7 @@ header.header
             //single form panel
             .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
             
-              h3.multisteps-form__title Your Order
+              h3.multisteps-form__title Your Order Info
               
               .multisteps-form__content
               
