Progress: active btn styles

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ header.header
         
           .multisteps-form__progress
             
-            button.multisteps-form__progress-btn(type="button" title="User Info" data-step="1") User Info
+            button.multisteps-form__progress-btn.js-active(type="button" title="User Info" data-step="1") User Info
 
             button.multisteps-form__progress-btn(type="button" title="Address" data-step="2") Address
               
