Steps function is improved, added title to the pen

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,9 @@ header.header
   //content inner
   .content__inner
   
+    //content title
+    h2.content__title Click on steps, 'Prev' and 'Next' buttons
+  
     //multisteps-form
     .multisteps-form
     
