Active panel revealing script

--- a/src/index.pug
+++ b/src/index.pug
@@ -39,7 +39,7 @@ header.header
           form.multisteps-form__form
           
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded.bg-white
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-active
               
               h3.multisteps-form__title Your User Info
               
@@ -80,7 +80,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white
             
               h3.multisteps-form__title Your Address
               
@@ -116,7 +116,7 @@ header.header
                   button.btn.btn-primary.ml-auto(type="button" title="Next") Next
               
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white
             
               h3.multisteps-form__title Your Order Info
               
@@ -140,25 +140,7 @@ header.header
                         h5.card-title Item Title
                         p.card-text Small and nice item description
                         a.btn.btn-primary(href="#" title="Item Link") Item Link
-                        
-                  .col-6.mt-4
-                
-                    .card.shadow-sm
-                      .card-body
-                    
-                        h5.card-title Item Title
-                        p.card-text Small and nice item description
-                        a.btn.btn-primary(href="#" title="Item Link") Item Link
-                        
-                  .col-6.mt-4
-                
-                    .card.shadow-sm
-                      .card-body
-                    
-                        h5.card-title Item Title
-                        p.card-text Small and nice item description
-                        a.btn.btn-primary(href="#" title="Item Link") Item Link
-                   
+                                       
                 .row
                   .button-row.d-flex.mt-4.col-12
                   
@@ -166,7 +148,7 @@ header.header
                     button.btn.btn-primary.ml-auto(type="button" title="Next") Next
             
             //single form panel
-            .multisteps-form__panel.shadow.p-4.rounded.bg-white.js-hidden
+            .multisteps-form__panel.shadow.p-4.rounded.bg-white
             
               h3.multisteps-form__title Additional Comments
               
