Active panel is set on prev and next click

--- a/src/index.pug
+++ b/src/index.pug
@@ -77,7 +77,7 @@ header.header
                   
                 .button-row.d-flex.mt-4
                 
-                  button.btn.btn-primary.ml-auto(type="button" title="Next") Next
+                  button.btn.btn-primary.ml-auto.js-btn-next(type="button" title="Next") Next
             
             //single form panel
             .multisteps-form__panel.shadow.p-4.rounded.bg-white
@@ -112,8 +112,8 @@ header.header
                     
                 .button-row.d-flex.mt-4
                   
-                  button.btn.btn-primary(type="button" title="Prev") Prev
-                  button.btn.btn-primary.ml-auto(type="button" title="Next") Next
+                  button.btn.btn-primary.js-btn-prev(type="button" title="Prev") Prev
+                  button.btn.btn-primary.ml-auto.js-btn-next(type="button" title="Next") Next
               
             //single form panel
             .multisteps-form__panel.shadow.p-4.rounded.bg-white
@@ -144,8 +144,8 @@ header.header
                 .row
                   .button-row.d-flex.mt-4.col-12
                   
-                    button.btn.btn-primary(type="button" title="Prev") Prev
-                    button.btn.btn-primary.ml-auto(type="button" title="Next") Next
+                    button.btn.btn-primary.js-btn-prev(type="button" title="Prev") Prev
+                    button.btn.btn-primary.ml-auto.js-btn-next(type="button" title="Next") Next
             
             //single form panel
             .multisteps-form__panel.shadow.p-4.rounded.bg-white
@@ -160,6 +160,6 @@ header.header
                   
                 .button-row.d-flex.mt-4
                 
-                  button.btn.btn-primary(type="button" title="Prev") Prev
+                  button.btn.btn-primary.js-btn-prev(type="button" title="Prev") Prev
                   button.btn.btn-success.ml-auto(type="button" title="Send") Send
                   
