Hotfix: removed data-attrs from steps

--- a/src/index.pug
+++ b/src/index.pug
@@ -23,13 +23,13 @@ header.header
         
           .multisteps-form__progress
             
-            button.multisteps-form__progress-btn.js-active(type="button" title="User Info" data-step="1") User Info
+            button.multisteps-form__progress-btn.js-active(type="button" title="User Info") User Info
 
-            button.multisteps-form__progress-btn(type="button" title="Address" data-step="2") Address
+            button.multisteps-form__progress-btn(type="button" title="Address") Address
               
-            button.multisteps-form__progress-btn(type="button" title="Order Info" data-step="3") Order Info
+            button.multisteps-form__progress-btn(type="button" title="Order Info") Order Info
               
-            button.multisteps-form__progress-btn(type="button" title="Comments" data-step="4") Comments        
+            button.multisteps-form__progress-btn(type="button" title="Comments") Comments        
       
       //form panels
       .row
