Responsive: panels 1 and 2

--- a/src/index.pug
+++ b/src/index.pug
@@ -47,31 +47,31 @@ header.header
               
                 .form-row.mt-4
                 
-                  .col
+                  .col-12.col-md-6
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="First Name")
                   
-                  .col
+                  .col-12.col-md-6.mt-4.mt-md-0
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Last Name")
                     
                 .form-row.mt-4
                 
-                  .col
+                  .col-12.col-md-6
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Login")
                   
-                  .col
+                  .col-12.col-md-6.mt-4.mt-md-0
                   
                     input.multisteps-form__input.form-control(type="email" placeholder="Email")
                     
                 .form-row.mt-4
                 
-                 .col
+                 .col-12.col-md-6
                   
                   input.multisteps-form__input.form-control(type="password" placeholder="Password")
                   
-                 .col
+                 .col-12.col-md-6.mt-4.mt-md-0
                   
                   input.multisteps-form__input.form-control(type="password" placeholder="Repeat Password")
                   
@@ -88,25 +88,28 @@ header.header
               
                 .form-row.mt-4
                   
-                  input.multisteps-form__input.form-control(type="text" placeholder="Address 1")
+                  .col
+                  
+                    input.multisteps-form__input.form-control(type="text" placeholder="Address 1")
                   
                 .form-row.mt-4
                   
-                  input.multisteps-form__input.form-control(type="text" placeholder="Address 2")
+                  .col
+                    input.multisteps-form__input.form-control(type="text" placeholder="Address 2")
                   
                 .form-row.mt-4
                 
-                  .col-6
+                  .col-12.col-md-6
                     
                     input.multisteps-form__input.form-control(type="text" placeholder="City")
                     
-                  .col-3
+                  .col-6.col-md-3.mt-4.mt-md-0
                     
                     select.multisteps-form__select.form-control
                       option(selected) State...
                       option ...
                       
-                  .col-3
+                  .col-6.col-md-3.mt-4.mt-md-0
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Zip")
                     
@@ -156,7 +159,7 @@ header.header
               
                 .form-row.mt-4
                 
-                  textarea.form-control(placeholder="Additional Comments and Requirements")
+                  textarea.multisteps-form__textarea.form-control(placeholder="Additional Comments and Requirements")
                   
                 .button-row.d-flex.mt-4
                 
