Responsive: panels 1 and 2 - fixes, panel 3

--- a/src/index.pug
+++ b/src/index.pug
@@ -34,7 +34,7 @@ header.header
       //form panels
       .row
       
-        .col-12.col-md-10.col-lg-6.m-auto
+        .col-12.col-md-10.col-lg-8.m-auto
         
           form.multisteps-form__form
           
@@ -47,31 +47,31 @@ header.header
               
                 .form-row.mt-4
                 
-                  .col-12.col-md-6
+                  .col-12.col-sm-6
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="First Name")
                   
-                  .col-12.col-md-6.mt-4.mt-md-0
+                  .col-12.col-sm-6.mt-4.mt-sm-0
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Last Name")
                     
                 .form-row.mt-4
                 
-                  .col-12.col-md-6
+                  .col-12.col-sm-6
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Login")
                   
-                  .col-12.col-md-6.mt-4.mt-md-0
+                  .col-12.col-sm-6.mt-4.mt-sm-0
                   
                     input.multisteps-form__input.form-control(type="email" placeholder="Email")
                     
                 .form-row.mt-4
                 
-                 .col-12.col-md-6
+                 .col-12.col-sm-6
                   
                   input.multisteps-form__input.form-control(type="password" placeholder="Password")
                   
-                 .col-12.col-md-6.mt-4.mt-md-0
+                 .col-12.col-sm-6.mt-4.mt-sm-0
                   
                   input.multisteps-form__input.form-control(type="password" placeholder="Repeat Password")
                   
@@ -99,17 +99,17 @@ header.header
                   
                 .form-row.mt-4
                 
-                  .col-12.col-md-6
+                  .col-12.col-sm-6
                     
                     input.multisteps-form__input.form-control(type="text" placeholder="City")
                     
-                  .col-6.col-md-3.mt-4.mt-md-0
+                  .col-6.col-sm-3.mt-4.mt-sm-0
                     
                     select.multisteps-form__select.form-control
                       option(selected) State...
                       option ...
                       
-                  .col-6.col-md-3.mt-4.mt-md-0
+                  .col-6.col-sm-3.mt-4.mt-sm-0
                   
                     input.multisteps-form__input.form-control(type="text" placeholder="Zip")
                     
@@ -126,7 +126,7 @@ header.header
               .multisteps-form__content
               
                 .row
-                  .col-6.mt-4
+                  .col-12.col-sm-6.mt-4
                 
                     .card.shadow-sm
                       .card-body
@@ -135,7 +135,7 @@ header.header
                         p.card-text Small and nice item description
                         a.btn.btn-primary(href="#" title="Item Link") Item Link
                         
-                  .col-6.mt-4
+                  .col-12.col-sm-6.mt-4
                 
                     .card.shadow-sm
                       .card-body
